further improved GUI and a bunch of other problems *sigh*